# hri_course_ws

./: .gitignore  README.md
src/basic_example/: CMakeLists.txt  package.xml
src/basic_example/scripts/: service_advertiser.py  service_client.py  topic_publisher.py
src/basic_example/srv/: Adder.srv
src/chatbot_control/: CMakeLists.txt  package.xml
src/chatbot_control/scripts/: chatbot_control.py
src/example_package/: CMakeLists.txt  package.xml
src/example_package/scripts/: topic_publisher.py
src/hri_bot/: CMakeLists.txt  package.xml
src/hri_bot/launch/: wander_bot.launch
src/hri_bot/scripts/: simple_control.py  wander_bot.py
src/image_processing/: blend-and-pasting-images.ipynb  blending-images-of-different-size.ipynb  color_space.ipynb
src/line_course/: CMakeLists.txt  course.launch  package.xml
src/numpy_and_image_basics/: drawing-opencv.ipynb  images-and-numpy.ipynb  numpy-arrays.ipynb  opening-image-files.ipynb  using-imshow-opencv.py
src/opencv_bot/: CMakeLists.txt  package.xml
src/opencv_bot/scripts/: line_follow_bot.py
src/python_examples/: Factorial.py  factorial_main.py  simple_python.py
src/service_example/: CMakeLists.txt  package.xml
src/service_example/scripts/: service_advertiser.py  service_client.py
src/service_example/srv/: Adder.srv
