<?xml version="1.0"?>
<package format="2">
  <name>chatbot_control</name>
  <version>0.0.0</version>
  <description>This is an exmample package</description>
  <maintainer email="abc@xyz.com">ABC</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>dialogflow_ros</depend>
  <depend>dialogflow_ros_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
