<?xml version="1.0"?>
<package format="2">
<name>service_example</name>
	<version>0.0.0</version>
	<description>This is an example package for creating a topic publisher</description>
	<maintainer email="abc@xyz.com">ABC</maintainer>
	<license>TODO</license>
	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>rospy</depend>
	<depend>std_msgs</depend>
  <depend>message_generation</depend>
</package>
